[gd_scene load_steps=16 format=2]

[ext_resource path="res://Fonts/romulus.tres" type="DynamicFont" id=1]
[ext_resource path="res://MainHUD.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Sprites/Pies/ButterChickenIdle2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Sprites/Pies/ButterChickenIdle3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Sprites/Pies/ButterChickenIdle1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Sprites/Pies/ButterChickenIdle0.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Sprites/Pies/SteacknCheeseIdle0.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Sprites/Pies/MincePieIdle0.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Sprites/Pies/MincePieIdle2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Sprites/Pies/SteacknCheeseIdle2.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Sprites/Pies/MincePieIdle1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Sprites/Pies/SteacknCheeseIdle1.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="MainHUD" type="Node2D"]
script = ExtResource( 2 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="HUD"]
margin_left = 40.0
margin_top = 24.0
margin_right = 325.0
margin_bottom = 93.0
custom_fonts/font = ExtResource( 1 )
text = "Money: 0"

[node name="Deaths" type="Label" parent="HUD"]
margin_left = 32.0
margin_top = 80.0
margin_right = 502.0
margin_bottom = 221.0
custom_fonts/font = ExtResource( 1 )
text = "Gamer Score: 0
"

[node name="ButterPie" type="AnimatedSprite" parent="HUD"]
visible = false
position = Vector2( 92, 168 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
frame = 1
playing = true
offset = Vector2( -8, 0 )

[node name="MincePie" type="AnimatedSprite" parent="HUD"]
visible = false
position = Vector2( 232, 168 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 2 )
playing = true
offset = Vector2( -8, 0 )

[node name="SteakPie" type="AnimatedSprite" parent="HUD"]
visible = false
position = Vector2( 384, 168 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 3 )
playing = true
offset = Vector2( -8, 0 )
